refactor(telemetry): the catalogue keeps the order it builds, and one guard judges all three
Motivation:
`JfrEventCatalogue`'s constructor built a `LinkedHashMap` to preserve the order a catalogue is
written in, deep-copied each group into it, and then handed the whole thing to `Map.copyOf` — whose
iteration order is salted per JVM run. The `LinkedHashMap` bought nothing, `allHotPath()` answered in
a different order on every run, and the comment above it read "Deep, not Map.copyOf" directly over a
`Map.copyOf` call.

Three near-copies of the same small surface sat around it. `catalogue()` and `warmHotPath(String)`
were byte-identical in the Core and Community holders, javadoc included — including a sentence about
"the two start seams" that is true in Core and wrong in Community, where eleven subsystems call it.
`KafkaJfrEventCatalogue` was a third shape: no `catalogue()`, and its own `hotPath()` /
`deliberatelyCold()` returning the raw constants past the `JfrEventCatalogue` it had just built. And
the two coverage guards carried the same two-direction set-difference assertions and the same
`difference` helper in two copies.

Modification:
The deep copy stays and `Collections.unmodifiableMap` replaces `Map.copyOf`, so declaration order
survives into `allHotPath()`; the comment now says what the code does and why both halves matter.

The shorthands stay, and the javadoc explains what deleting them would cost:
`JfrEventCatalogueCoverageTest` matches a warm-up call by its target owner, and through
`catalogue().warmHotPath(...)` that owner is `JfrEventCatalogue` for every module at once — the guard
could no longer tell a subsystem that warms from one that does not. Community's copied sentence is
corrected to what actually calls it.

Kafka's third shape goes: it gains `catalogue()` and reads its buckets through it, keeping the no-arg
`warmHotPath()` because it is keyed by an engine rather than by a `Subsystem.name()`, with the reason
in the javadoc.

`JfrEventCatalogueCove